# cmtprinter

./: .gitignore  README.rst  README_ZH.rst  pyproject.toml
cmtprinter/: core.py  main.py
tests/: conftest.py  test_cmtprinter.py  test_main.py
tests/data/: simple.py
