[tool.poetry]
name = "cmtprinter"
version = "0.0.1"
description = ""
authors = ["ssfdust <ssfdust@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tabulate = "^0.8.9"
GitPython = "^3.1.24"
texttable = "^1.6.4"
wcwidth = "^0.2.5"
CJKwrap = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.3"
black = "^21.9b0"
isort = "^5.9.3"

[tool.poetry.scripts]
cmtprinter = "cmtprinter.main:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
